--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "prisma-mermaid",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "@nonsoo/prisma-mermaid",
+  "version": "0.0.0",
+  "description": "A Prisma generator that generates Mermaid Class or ER diagrams from your Prisma schema.",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
+  "files": [
+    "build"
+  ],
   "scripts": {
     "build": "tsup",
     "lint": "eslint .",
@@ -18,7 +22,21 @@
   "author": "Nonso O",
   "license": "ISC",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nonsoo/prisma-mermaid.git"
+  },
+  "engines": {
+    "node": ">=22.0.0"
+  },
+  "exports": {
+    ".": {
+      "types": "./build/index.d.ts",
+      "default": "./build/index.js"
+    }
+  },
   "devDependencies": {
+    "@changesets/cli": "^2.29.7",
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
@@ -31,10 +49,7 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^4.0.10"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@prisma/internals": "^7.0.0"
-  },
-  "engines": {
-    "node": ">=22.0.0"
   }
 }
