--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
   "exports": {
     ".": {
       "types": "./build/index.d.ts",
+      "import": "./build/index.js",
+      "require": "./build/index.cjs",
       "default": "./build/index.js"
     }
   },
