--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nonsoo/prisma-mermaid",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A Prisma generator that generates Mermaid Class or ER diagrams from your Prisma schema.",
   "main": "build/index.js",
   "bin": {
@@ -10,9 +10,6 @@
   "files": [
     "build"
   ],
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "build": "tsup",
     "lint": "eslint .",
@@ -53,6 +50,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
     "@eslint/js": "^9.39.1",
+    "@prisma/internals": "^7.0.1",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
@@ -65,10 +63,12 @@
     "vitest": "^4.0.10"
   },
   "peerDependencies": {
-    "prisma": "^6.10.0 || ^7.0.0",
-    "@prisma/client": "^6.0.0 || ^7.0.0"
+    "@prisma/client": "^6.0.0 || ^7.0.0",
+    "@prisma/internals": "^6.0.0 || ^7.0.0"
   },
-  "dependencies": {
-    "@prisma/internals": "^7.0.0"
+  "peerDependenciesMeta": {
+    "@prisma/internals": {
+      "optional": true
+    }
   }
 }
