--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.7",
     "@eslint/js": "^9.39.1",
-    "@prisma/internals": "^7.0.1",
     "@types/node": "^24.10.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
@@ -66,9 +65,7 @@
     "@prisma/client": "^6.0.0 || ^7.0.0",
     "@prisma/internals": "^6.0.0 || ^7.0.0"
   },
-  "peerDependenciesMeta": {
-    "@prisma/internals": {
-      "optional": true
-    }
+  "dependencies": {
+    "@prisma/internals": "^7.0.0"
   }
 }
